--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,11 @@ build: false
 environment:
   matrix:
     - PYTHON_VERSION: 2.7
+      MINICONDA: C:\Miniconda
+    - PYTHON_VERSION: 2.7
       MINICONDA: C:\Miniconda-x64
+    - PYTHON_VERSION: 3.6
+      MINICONDA: C:\Miniconda3
     - PYTHON_VERSION: 3.6
       MINICONDA: C:\Miniconda3-x64
 
