--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include README.rst
 include LICENSE.txt
 include MANIFEST.in
+include requirements.txt
 include setup.py
 include timeboard/VERSION.txt
 
