--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas >=0.22,<=0.24; python_version < '3.6.1'
-pandas >=0.22; python_version >= '3.6.1'
+pandas >=0.22,<=0.24; python_full_version < '3.6.1'
+pandas >=0.22; python_full_version >= '3.6.1'
 numpy >=1.13,<=1.16; python_version < '3.6'
 numpy >=1.16; python_version >= '3.6'
 python-dateutil>=2.6.1
