--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,10 @@ environment:
       MINICONDA: C:\Miniconda3
     - PYTHON_VERSION: 3.7
       MINICONDA: C:\Miniconda3-x64
+    - PYTHON_VERSION: 3.8
+      MINICONDA: C:\Miniconda3
+    - PYTHON_VERSION: 3.8
+      MINICONDA: C:\Miniconda3-x64
 
 init:
   - "ECHO %PYTHON_VERSION% %MINICONDA%"
